# dice-game

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: codeql.yml  python-app.yml
scripts/: run.py
src/: saikoro.py
src/application/: dice_service.py
src/application/dtos/: dice.py
src/application/interfaces/: dice.py
src/application/services/: dice.py
src/domain/: dice.py
src/domain/events/: dice_rolled.py
src/domain/models/: dice.py
src/domain/value_objects/: dice_face.py
src/infrastructure/: console_ui.py  container.py
src/infrastructure/api/: __init__.py  config.py  index.html  main.py  run.py  server.ts
src/infrastructure/ui/: package.json
src/infrastructure/ui/src/: App.tsx
tests/: __init__.py  test_saikoro.py
tests/application/: test_dice_service.py
tests/domain/: test_dice.py
tests/e2e/api/: test_dice_endpoints.py
tests/infrastructure/: test_console_ui.py
tests/integration/api/: test_dice_api.py
tests/unit/application/services/: test_dice_service.py
tests/unit/domain/events/: test_dice_rolled.py
tests/unit/domain/models/: test_dice.py
tests/unit/domain/value_objects/: test_dice_face.py
