[project]
name = "dice-game"
version = "0.1.0"
description = "A simple dice rolling game with ASCII art animation"
requires-python = ">=3.8"
dependencies = [
    "pytest>=8.0.0",
]

[project.scripts]
dice = "src.saikoro:show_rolling_animation"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."] 
